# challenge

./: README.md  alembic.ini  main.py  pyproject.toml
alembic/versions/: 2abd4d6c20af_models.py  7496c04d7d5a_initial_migration.py
app-challenge/: package-lock.json  package.json
app-challenge/.next/: trace
app-challenge/.next/server/: next-font-manifest.js  next-font-manifest.json  server-reference-manifest.js  server-reference-manifest.json  webpack-runtime.js
app-challenge/.next/server/app/: _not-found_client-reference-manifest.js  not-found.js  not-found_client-reference-manifest.js  page.js  page_client-reference-manifest.js
app-challenge/.next/server/vendor-chunks/: @swc.js  next.js
app-challenge/.next/static/chunks/: app-pages-internals.js  webpack.js
app-challenge/.next/static/webpack/: 0ea6a56ff9035ba0.webpack.hot-update.json  8abe4d71331829f1.webpack.hot-update.json  b9f15ffe7639c903.webpack.hot-update.json  c078a83c69520f95.webpack.hot-update.json  webpack.0ea6a56ff9035ba0.hot-update.js  webpack.1c7ce8ac13fdb6b5.hot-update.js  webpack.2d56d89268b5e26d.hot-update.js  webpack.301c3e4288103aa7.hot-update.js  webpack.33dfd63d50d6f8ca.hot-update.js  webpack.4567d56c2c89ff37.hot-update.js  webpack.47dd04812c7c8676.hot-update.js  webpack.4c139b5ee7c46f1e.hot-update.js  webpack.5d29d235338c1b02.hot-update.js  webpack.6e296b21ff28f23e.hot-update.js  webpack.8abe4d71331829f1.hot-update.js  webpack.8c77b684e737c8a3.hot-update.js  (+8 more)
app-challenge/app/: page.tsx
backend-challenge/: package-lock.json  package.json
backend-challenge/app/: page.tsx
(+28 files in other folders)
