[tool.poetry]
name = "challenge-sportclub"
version = "0.1.0"
description = ""
authors = ["Pablo Martin Perez <pablomartin.it@gmail.com>"]
readme = "README.md"
packages = [{include = "challenge_sportclub"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.105.0"
uvicorn = "^0.24.0.post1"
pydantic = "^2.5.2"
sqlalchemy = "^2.0.23"
alembic = "^1.13.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
